Completed Airline Arrivals removed some low contributing variables

--- a/HomeworkProjects/Unit3/Lesson6/Project2-AirlineArrivals/AirlineArrivals.ipynb
+++ b/HomeworkProjects/Unit3/Lesson6/Project2-AirlineArrivals/AirlineArrivals.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,67 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Year                 0\n",
-       "Month                0\n",
-       "DayofMonth           0\n",
-       "DayOfWeek            0\n",
-       "DepTime              0\n",
-       "CRSDepTime           0\n",
-       "ArrTime              0\n",
-       "CRSArrTime           0\n",
-       "UniqueCarrier        0\n",
-       "FlightNum            0\n",
-       "TailNum              0\n",
-       "ActualElapsedTime    0\n",
-       "CRSElapsedTime       0\n",
-       "AirTime              0\n",
-       "ArrDelay             0\n",
-       "DepDelay             0\n",
-       "Origin               0\n",
-       "Dest                 0\n",
-       "Distance             0\n",
-       "TaxiIn               0\n",
-       "TaxiOut              0\n",
-       "Cancelled            0\n",
-       "CancellationCode     0\n",
-       "Diverted             0\n",
-       "CarrierDelay         0\n",
-       "WeatherDelay         0\n",
-       "NASDelay             0\n",
-       "SecurityDelay        0\n",
-       "LateAircraftDelay    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the current time of start is 2019-06-02 13:12:43.583512\n",
-      "End is 2019-06-02 13:12:43.884058\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Definine outcome and predictors.\n",
     "print(\"the current time of start is {}\".format(str(datetime.datetime.now())))\n",
@@ -251,14 +202,14 @@
     "y = df['ArrDelay']\n",
     "# X = df.loc[:, ~df.columns.isin(['ArrDelay','UniqueCarrier', 'TailNum', 'Origin', 'Dest', 'CancellationCode', 'ArrDelay_Flag'])]\n",
     "\n",
-    "X = df[['LateAircraftDelay','Distance','SecurityDelay','CRSDepTime','WeatherDelay','TaxiOut','DepDelay','DepTime']]\n",
+    "X = df[['LateAircraftDelay','SecurityDelay','CRSDepTime','WeatherDelay','TaxiOut','DepDelay']] # remove Distance, DepTime\n",
     "\n",
     "print(\"End is {}\".format(str(datetime.datetime.now())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -358,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,18 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train_size = 0.8, X_train is 5607782, and y_train is 5607782\n",
-      "test_size  = 0.2, X_test  is 5607782, and y_test is 1401946\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let's fit it with the RFC training set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, train_size=train_size, random_state=0)\n",
@@ -402,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,32 +505,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2019-06-02 13:12:45.330207: Begin run_linear_regression \n",
-      "2019-06-02 13:12:45.330378: Running regr.fit for the training set \n",
-      "\n",
-      "Coeffecients: \n",
-      " [ 0.05433345 -0.00264428  1.47277252  0.00552022  0.08504082  0.76431744\n",
-      "  0.95655644 -0.00737108]\n",
-      "\n",
-      "Intercept: \n",
-      " -8.510171796684187\n",
-      "\n",
-      "R-squared for training data set:\n",
-      "0.9141129842997001\n",
-      "\n",
-      "R-squared for test data set:\n",
-      "0.9154804290605232\n",
-      "2019-06-02 13:12:46.560250: End run_linear_regression \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if run_linear_regression == True: \n",
     "    print_timestamp('Begin run_linear_regression')\n",
@@ -611,20 +530,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['LateAircraftDelay', 'Distance', 'SecurityDelay', 'CRSDepTime', 'WeatherDelay', 'TaxiOut', 'DepDelay', 'DepTime'], dtype='object')"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "X.columns"
    ]
