Latest version with rolled up changes from AmazonReviews

--- a/HomeworkProjects/Unit3/Lesson6/Project5-CancerDiagnosis/CancerDiagnosis.ipynb
+++ b/HomeworkProjects/Unit3/Lesson6/Project5-CancerDiagnosis/CancerDiagnosis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,7 @@
     " __stuff  Why is it an outlier.  We remove outliers. Look for entries > 2.5 std deviations. Code, tables, and markdown explaining. \n",
     " let's do this, and why, ...__\n",
     " 1. How can you add, change, or remove features to get more out of your data?  \n",
-    " __ feature importances, pca, dropping low variance items, correlated feature pairs, features too highly correlated, feature \n",
-    " engineering, transforming, timestamp and make a month, day, year column."
+    " __Feature importances, PCA, dropping low variance items, correlated feature pairs, features too highly correlated, feature engineering, transforming, timestamp and make a month, day, year column from it.__"
    ]
   },
   {
@@ -60,7 +59,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constants\n",
+    "max_iterations         = 10            # set it to > 0 for determining the features inportance\n",
+    "random_state           = 57\n",
+    "rows_in_training_set   = 10000\n",
+    "rows_in_test_set       = 200000\n",
+    "test_size              = 0.20\n",
+    "train_size             = 0.80\n",
+    "rfc_test_size          = 50000\n",
+    "rfc_train_size         = 5000\n",
+    "run_CountVectorizer    = True\n",
+    "run_TfidfVectorizer    = False\n",
+    "BegTimeStampNewlines   = 3\n",
+    "EndTimeStampNewlines   = 3\n",
+    "EndTimeStamp           = '\\n'*EndTimeStampNewlines+'End'\n",
+    "BegTimeStamp           = 'End'+'\\n'*BegTimeStampNewlines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +96,13 @@
     "flag_to_run_logistic_regression = True\n",
     "flag_to_run_lasso_regression = False\n",
     "flag_to_run_ridge_regression = False\n",
-    "flag_to_run_svc = False"
+    "flag_to_run_svc = False\n",
+    "flag_to_run_vectorizer_nb = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -113,12 +136,13 @@
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import cross_val_predict, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from IPython.display import Markdown, display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -193,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printFormatted(string):\n",
+    "    display(Markdown(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +297,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +317,7 @@
        "Index(['SampleCodeNumber', 'ClumeppThickness', 'UniformityCellSize', 'UniformityCellShape', 'MarginalAdhesion', 'SingleEpithelial', 'BareNuclei', 'BlandChromatin', 'NormalNucleoli', 'Mitosis', 'Class'], dtype='object')"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the current time of start is 2019-06-07 00:26:36.725577\n",
-      "End is 2019-06-07 00:26:36.727283\n"
+      "the current time of start is 2019-06-09 15:02:25.883424\n",
+      "End is 2019-06-09 15:02:25.884872\n"
      ]
     }
    ],
@@ -324,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +467,7 @@
        "4                 4                   1                    1                 3                 2          1               3               1        1"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +618,7 @@
        "max              10.000              10.000               10.000            10.000            10.000          10.000          10.000   10.000"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +648,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +677,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -726,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,14 +916,15 @@
     "    print('\\nR-squared simple model training set yields:')\n",
     "    print(lr.score(X_train, y_train))\n",
     "    print(\"here comes the test set\")\n",
-    "    print(lr.score(X_test, y_test))\n",
+    "    lrscore = lr.score(X_test, y_test)\n",
+    "    printFormatted(\"###  Logistic Regression score={:.2%}\".format(lrscore))\n",
     "    \n",
     "    print_timestamp('\\n'*3+'End')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 125,
    "metadata": {
     "run_control": {
      "frozen": false,
@@ -937,27 +972,87 @@
     "    ridgeregr = linear_model.Ridge(alpha=10, fit_intercept=False) \n",
     "    ridgeregr.fit(X_train, y_train)\n",
     "    print(ridgeregr.score(X_train, y_train))\n",
-    "#     origparacms = ridgeregr.coef_[0]\n",
-    "#     print(origparams)\n",
     "\n",
-    "#     ridgeregrBig = linear_model.Ridge(alpha=10, fit_intercept=False)\n",
-    "#     ridgeregrBig.fit(X_train2, y_train)\n",
-    "#     print(ridgeregrBig.score(X_train2, y_train))\n",
-    "#     newparams = ridgeregrBig.coef_[0, 0:len(origparams)]\n",
-    "\n",
-    "#     print('\\nParameter Estimates for the same predictors for the small model'\n",
-    "#           'and large model:')\n",
-    "#     compare = np.column_stack((origparams, newparams))\n",
-    "#     prettycompare = np.array2string(\n",
-    "#         compare,\n",
-    "#         formatter={'float_kind':'{0:.3f}'.format})\n",
-    "#     print(prettycompare)\n",
     "    print_timestamp('\\n'*3+'End')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorizer_nb():\n",
+    "\n",
+    "    print_timestamp(BegTimeStamp)\n",
+    "    \n",
+    "    # 1. import and instantiate CountVectorizer (with the default parameters)\n",
+    "\n",
+    "    # 2. instantiate CountVectorizer (vectorizer)\n",
+    "\n",
+    "    X = df.message\n",
+    "    y = df.sentiment_label\n",
+    "\n",
+    "    # split X and y into training and testing sets\n",
+    "    # by default, it splits 75% training and 25% test\n",
+    "    # random_state=1 for reproducibility\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
+    "\n",
+    "    # 3. fit\n",
+    "    print(\"run_CountVectorizer={}, and run_TfidfVectorizer={}\".format(run_CountVectorizer,\n",
+    "                                                                      run_TfidfVectorizer))\n",
+    "    if run_CountVectorizer == True:\n",
+    "        print(\"We are running with CountVectorizer\")\n",
+    "        vectorizer = CountVectorizer()\n",
+    "        vectorizer.fit(X_train)\n",
+    "        vectorizer_method = 'CountVectorizer'\n",
+    "    elif run_TfidfVectorizer == True:\n",
+    "        print(\"We are running with TfidfVectorizer\")\n",
+    "        vectorizer = TfidfVectorizer()\n",
+    "        vectorizer.fit_transform(X_train)\n",
+    "        vectorizer_method = 'TfidfVectorizer'\n",
+    "    \n",
+    "#     vectorizer_fit(X_train)\n",
+    "\n",
+    "    # 4. transform training data\n",
+    "    X_train_dtm = vectorizer.transform(X_train)\n",
+    "\n",
+    "    # equivalently: combine fit and transform into a single step\n",
+    "    # this is faster and what most people would do\n",
+    "    X_train_dtm = vectorizer.fit_transform(X_train)\n",
+    "\n",
+    "    # 4. transform testing data (using fitted vocabulary) into a document-term matrix\n",
+    "    X_test_dtm = vectorizer.transform(X_test)\n",
+    "    X_test_dtm\n",
+    "\n",
+    "    # you can see that the number of columns, 7456, is the same as what we have learned above in X_train_dtm\n",
+    "\n",
+    "    # 1. import\n",
+    "\n",
+    "    # 2. instantiate a Multinomial Naive Bayes model\n",
+    "    nb = MultinomialNB()\n",
+    "\n",
+    "    # 3. train the model \n",
+    "    # using X_train_dtm (timing it with an IPython \"magic command\")\n",
+    "\n",
+    "    nb.fit(X_train_dtm, y_train)\n",
+    "    \n",
+    "    # 4. make class predictions for X_test_dtm\n",
+    "    y_pred_class = nb.predict(X_test_dtm)\n",
+    "\n",
+    "    # calculate accuracy of class predictions\n",
+    "\n",
+    "    met_score = metrics.accuracy_score(y_test, y_pred_class)\n",
+    "    printFormatted('###  With {} vectorizer, the metrics accuracy score = {:.2%}'.format(vectorizer_method,\n",
+    "                                                                                         met_score))\n",
+    "    \n",
+    "    print_timestamp(EndTimeStamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,25 +1117,28 @@
     "\n",
     "    if flag_to_run_ridge_regression == True:\n",
     "        run_ridge_regression()\n",
+    "        \n",
+    "    if flag_to_run_vectorizer_nb == True:\n",
+    "        vectorizer_nb()\n",
     "\n",
     "    print_timestamp('End'+'\\n'*3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-06-07 00:26:37: In: main \n",
+      "2019-06-09 15:02:27: In: main \n",
       "\n",
       "\n",
       "Begin \n",
-      "2019-06-07 00:26:37: In: main We are running with a Classifier model \n",
-      "2019-06-07 00:26:37: In: run_correlation_matrix Begin\n",
+      "2019-06-09 15:02:27: In: main We are running with a Classifier model \n",
+      "2019-06-09 15:02:27: In: run_correlation_matrix Begin\n",
       "\n",
       "\n",
       " \n",
@@ -1071,31 +1169,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-06-07 00:26:37: In: run_correlation_matrix \n",
+      "2019-06-09 15:02:27: In: run_correlation_matrix \n",
       "\n",
       "\n",
       "End \n",
-      "2019-06-07 00:26:37: In: main We are running RandomForestClassifier \n",
-      "2019-06-07 00:26:37: In: run_rf Begin run_rf part 1 \n",
+      "2019-06-09 15:02:27: In: main We are running RandomForestClassifier \n",
+      "2019-06-09 15:02:27: In: run_rf Begin run_rf part 1 \n",
       "Training score = 1.0\n",
-      "Test score = 0.9714285714285714\n",
-      "2019-06-07 00:26:38: In: run_rf End run_rfr part 1 \n",
-      "2019-06-07 00:26:38: In: run_logistic_regression \n",
+      "Test score = 0.9571428571428572\n",
+      "2019-06-09 15:02:27: In: run_rf End run_rfr part 1 \n",
+      "2019-06-09 15:02:27: In: run_logistic_regression \n",
       "\n",
       "\n",
       "Begin \n",
-      "2019-06-07 00:26:38: In: run_logistic_regression Running lr.fit for the training set \n",
-      "2019-06-07 00:26:38: In: run_logistic_regression Running lr.fit for the training set \n",
+      "2019-06-09 15:02:27: In: run_logistic_regression Running lr.fit for the training set \n",
+      "2019-06-09 15:02:27: In: run_logistic_regression Running lr.fit for the training set \n",
       "\n",
       "R-squared simple model training set yields:\n",
       "0.9697933227344993\n",
-      "here comes the test set\n",
-      "0.9714285714285714\n",
-      "2019-06-07 00:26:38: In: run_logistic_regression \n",
+      "here comes the test set\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "###  Logistic Regression score=97.14%"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-06-09 15:02:27: In: run_logistic_regression \n",
       "\n",
       "\n",
       "End \n",
-      "2019-06-07 00:26:38: In: main End\n",
+      "2019-06-09 15:02:27: In: main End\n",
       "\n",
       "\n",
       " \n"
