--- a/HomeworkProjects/Unit3/Lesson7/Project1/yelp-reviews.ipynb
+++ b/HomeworkProjects/Unit3/Lesson7/Project1/yelp-reviews.ipynb
@@ -965,6 +965,95 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "###  Metrics accuracy score = 76.24% with LogisticRegression"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Steps information: [('tfidf', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=0.8, max_features=50000, min_df=0.1,\n",
+       "        ngram_range=(1, 3), norm='l2', preprocessor=None, smooth_idf=True,\n",
+       "        stop_words='english', strip_accents=None, sublinear_tf=False,\n",
+       "        token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b', tokenizer=None, use_idf=True,\n",
+       "        vocabulary=None)), ('clf', LogisticRegression(C=1e+20, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='warn',\n",
+       "          n_jobs=None, penalty='l2', random_state=None, solver='lbfgs',\n",
+       "          tol=0.0001, verbose=0, warm_start=False))]"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "2019-06-24 22:26:05: In: sentiment_analyzer Finished running pipeline with:\n",
+       "LogisticRegression:  "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "2019-06-24 22:26:05: In: sentiment_analyzer \n",
+       "\n",
+       "\n",
+       "End "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "2019-06-24 22:26:16: In: sentiment_analyzer Begin\n",
+       "\n",
+       "\n",
+       " running with path=A "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "####  Now running pipeline with:  tfidf=TfidfVectorizer and clf=MultinomialNB\n",
+       "parameters={}:"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
