Made some formatting changes

--- a/HomeworkProjects/Unit3/Lesson7/Project1/yelp-reviews.ipynb
+++ b/HomeworkProjects/Unit3/Lesson7/Project1/yelp-reviews.ipynb
@@ -28,24 +28,24 @@
    "source": [
     "#### Specific items to cover:\n",
     "\n",
-    "1.  #### Research question that this model addresses:\n",
-    "    #### Can we predict the number of stars for a Yelp rating from the review provided by the customer?  \n",
+    "1.  Research question that this model addresses:\n",
+    "    Can we predict the number of stars for a Yelp rating from the review provided by the customer?  \n",
     "    \n",
-    "1.  #### How did I choose my model specifications and against what alternatives did I compare it?\n",
-    "#### This was my performance criteria for this capstone:\n",
-    "    1. #### Model needed to complete in a reasonable amount of time, with minimal parameter tuning of either the vectorizer, or the model, using a classifier model, and have accuracy of at least 80%.  Measuring for both accuracy and performance, providing readouts for both.\n",
+    "1.  How did I choose my model specifications and against what alternatives did I compare it?\n",
+    "This was my performance criteria for this capstone:\n",
+    "    1. Model needed to complete in a reasonable amount of time, with minimal parameter tuning of either the vectorizer, or the model, using a classifier model, and have accuracy of at least 80%.  Measuring for both accuracy and performance, providing readouts for both.\n",
     "    \n",
     "    \n",
     "####  I chose a classifier model suitable for sentiment analysis, and chose from these 5 models:  \n",
-    "1. #### Random Forests\n",
-    "2. #### Support Vector Machines\n",
-    "3. #### Naive Bayes\n",
-    "4. #### MultiNomial Naive Bayes\n",
-    "5. #### Logistic Regression\n",
+    "1. Random Forests\n",
+    "2. Support Vector Machines\n",
+    "3. Naive Bayes\n",
+    "4. MultiNomial Naive Bayes\n",
+    "5. Logistic Regression\n",
     "    \n",
     "####    In addition, I experimented with 2 classifier tokenizers for the model:\n",
-    "1. #### CountVectorizer\n",
-    "1. #### TfidfVectorizer\n",
+    "1. CountVectorizer\n",
+    "1. TfidfVectorizer\n",
     "    \n",
     "    \n",
     "#### My findings on the 5 models attempted above:\n",
