--- a/HomeworkProjects/Unit4/Lesson4/Project5/UnsupervisedLearningChallenge.ipynb
+++ b/HomeworkProjects/Unit4/Lesson4/Project5/UnsupervisedLearningChallenge.ipynb
@@ -32,32 +32,27 @@
     "### Questions that need answering:\n",
     "\n",
     " 1. What question are you trying to solve (or prove wrong) ?   \n",
-    " __.__\n",
+    " __No questions to answer for this challenge.__\n",
     " 1. What kind of data do you have? -> describe the source.. \n",
-    " __xx__\n",
+    " __Sentiment analaysis, using bag of words, tfidf, Random Forest, Bernoulli Naive Bayes, and Multinomial Naive Bayes.__\n",
     " 1. Do some EDA, plots\n",
     " 1. What's missing from the data and how do you deal with it?  \n",
-    " __.__\n",
+    " __No missing data here.__\n",
     " 1. How can you add, change, or remove features to get more out of your data?  \n",
-    " __.__"
+    " __No added features here; it's sentiment analysis.__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test Report\n",
+    "### Test Report Template\n",
     "\n",
-    "#### stuff 1\n",
-    "xxx\n",
+    "#### \n",
     "\n",
-    "#### Elbow methods\n",
-    "xxx\n",
     "\n",
-    "#### For this test, I these different clustering methods:\n",
-    "xxx\n",
-    "\n",
-    "#### Key Learning. \n"
+    "#### Key Learning. \n",
+    "You cannot always improve on a model for even 5 percentage points.  Especially when using bag of words which has no configurable parameters."
    ]
   },
   {
